# ultimate_tic_tac_toe

./: .gitignore  ApproximateQAgent.cpp  ApproximateQAgent.h  CMakeLists.txt  IAgent.h  IBot.h  IEnvironment.h  IFeatureExtractor.h  RandomBot.cpp  RandomBot.h  SimpleExtractor.cpp  SimpleExtractor.h  UltimateTicTacToeGame.cpp  UltimateTicTacToeGame.h  create_archive.sh  debug_helpers.h  just_compile.sh  just_run.sh  position.cpp  position.h  rng.cpp  rng.h  run.sh  strategy.cpp
RL/: ApproximateQAgent.cpp  ApproximateQAgent.h  IAgent.cpp  IAgent.h  IEnvironment.cpp  IEnvironment.h  IFeatureExtractor.cpp  IFeatureExtractor.h  SimpleExtractor.cpp  SimpleExtractor.h  UltimateTicTacToeGame.cpp  UltimateTicTacToeGame.h
bots/: IBot.cpp  IBot.h  RLBot.cpp  RLBot.h  RandomBot.cpp  RandomBot.h
scripts/: create_archive.sh  just_compile_random.sh  just_compile_rl.sh  just_run.sh  run.sh
tests/: test_rng.cpp  test_ultimate_tictactoe_game.cpp
